--- a/trunk/src/about_tracing/profiling_view_test.html
+++ b/trunk/src/about_tracing/profiling_view_test.html
@@ -20,16 +20,18 @@ found in the LICENSE file.
     base.require('base.unittest');
     base.require('about_tracing.profiling_view');
     base.require('about_tracing.tracing_controller');
+    base.require('ui.dom_helpers');
   </script>
   <script>
     'use strict';
 
-    var testData = [
+    var testDataString = JSON.stringify([
       {name: 'a', args: {}, pid: 52, ts: 15000, cat: 'foo', tid: 53, ph: 'B'},
       {name: 'a', args: {}, pid: 52, ts: 19000, cat: 'foo', tid: 53, ph: 'E'},
       {name: 'b', args: {}, pid: 52, ts: 32000, cat: 'foo', tid: 53, ph: 'B'},
       {name: 'b', args: {}, pid: 52, ts: 54000, cat: 'foo', tid: 53, ph: 'E'}
-    ];
+    ]);
+
     var systemTraceTestData = [
       'systrace.sh-8170  [000] 0.013: sched_switch: ' +
                 'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
@@ -45,58 +47,81 @@ found in the LICENSE file.
                 'trace_event_clock_sync: parent_ts=0.0'
     ].join('\n');
 
-    /* This test just instantiates a ProflingView and adds it to the DOM
-     * to help with non-unittest UI work.
-     */
-    function testInstantiate() {
-      var view = new about_tracing.ProfilingView();
-      var tracingController;
-
-      // This code emulates Chrome's responses to sendFn enough that the real
-      // tracing controller can be used to interactively test the UI.
+    // This code emulates Chrome's responses to sendFn enough that the real
+    // tracing controller can be used to interactively test the UI.
+    function createSendHandler() {
       var systemTraceRequested = false;
+      var corruptTrace;
+      var tracingController;
       function send(message, opt_args) {
         var args = opt_args || [];
         if (message == 'getKnownCategories') {
           setTimeout(function() {
-            view.tracingController.onKnownCategoriesCollected(
+            tracingController.onKnownCategoriesCollected(
               ['a', 'b', 'c']);
           }, 1);
         } else if (message == 'beginTracing') {
           systemTraceRequested = opt_args[0];
         } else if (message == 'beginRequestBufferPercentFull') {
           setTimeout(function() {
-            view.tracingController.onRequestBufferPercentFullComplete(0.5);
+            tracingController.onRequestBufferPercentFullComplete(0.5);
           }, 1);
         } else if (message == 'endTracingAsync') {
           setTimeout(function() {
             if (systemTraceRequested) {
-              view.tracingController.onSystemTraceDataCollected(
+              tracingController.onSystemTraceDataCollected(
                   systemTraceTestData);
             }
-            var testDataString = JSON.stringify(testData);
+
             // Strip off [] and add a ,
             var n = testDataString.length - 1;
-            testDataString = testDataString.substr(1, n - 1) + ',';
-            view.tracingController.onEndTracingComplete(testDataString);
+            var tmp = testDataString.substr(1, n - 1) + ',';
+            if (corruptTrace)
+              tmp += 'corruption';
+            tracingController.onEndTracingComplete(tmp);
           }, 1);
         } else if (message == 'loadTraceFile') {
+
           setTimeout(function() {
-            view.tracingController.onLoadTraceFileComplete(
-                JSON.stringify(testData));
+            var tmp = testDataString.substr(0);
+            if (corruptTrace)
+              tmp += 'corruption';
+            tracingController.onLoadTraceFileComplete(tmp);
           }, 150);
         } else if (message == 'saveTraceFile') {
           setTimeout(function() {
-            view.tracingController.onSaveTraceFileComplete();
+            tracingController.onSaveTraceFileComplete();
           }, 1);
         }
       }
+      send.__defineSetter__('tracingController', function(c) {
+        tracingController = c;
+      });
+      send.__defineSetter__('corruptTrace', function(c) {
+        corruptTrace = c;
+      });
+      return send;
+    }
 
-      tracingController = new about_tracing.TracingController(send);
+    /* This test just instantiates a ProfilingView and adds it to the DOM
+     * to help with non-unittest UI work.
+     */
+    function testIntegration() {
+      var view = new about_tracing.ProfilingView();
+      var tracingController;
+
+      var sendHandler = createSendHandler();
+      tracingController = new about_tracing.TracingController(sendHandler);
+      sendHandler.tracingController = tracingController;
       tracingController.supportsSystemTracing_ = true;
 
       view.tracingController = tracingController;
       view.focusElement = view;
+      this.addHTMLOutput(undefined,
+                         ui.createCheckBox(
+                             sendHandler, 'corruptTrace',
+                             'profilingViewTest.corruptTrace', false,
+                             'Make traces corrupt'));
       this.addHTMLOutput(undefined, view);
 
       view.detach_();
@@ -130,10 +155,10 @@ found in the LICENSE file.
         this.wasCollectCategoriesCalled = true;
       },
 
-      get traceEvents() {
+      get traceEventData() {
         if (!this.wasBeginTracingCalled)
           return undefined;
-        return testData;
+        return testDataString;
       },
 
       get systemTraceEvents() {
@@ -175,7 +200,7 @@ found in the LICENSE file.
           tracingController.wasBeginTracingCalledWithSystemTracingEnabled);
 
       var e = new base.Event('traceEnded');
-      e.events = tracingController.traceEvents;
+      e.events = tracingController.traceEventData;
       tracingController.dispatchEvent(e);
       assertTrue(!!view.timelineView.model);
 
