--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -88,6 +88,7 @@ found in the LICENSE file.
   <div id="stats">
     <br />
   </div>
+  <ol class="exceptions"></ol>
 
   <div id='individual-tests'>
     <div class="unittest">
