--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -122,6 +122,21 @@ found in the LICENSE file.
     <div class="info-button-text metadata-dialog-text"></div>
   </div>
 </template>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
+
+<template id="view-category-filter-dialog-template">
+  <div class="category-filter-dialog">
+    Select active categories:
+    <form class="category-filter-dialog-form">
+      <div class="categories">
+      </div>
+    </form>
+  </div>
+</template>
 
 <script src="chrome://tracing/tracing.js"></script>
 </head>
