--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -45,6 +45,7 @@ body {
 <link rel="stylesheet" href="ui/quad_view.css">
 <link rel="stylesheet" href="ui/quad_stack.css">
 <link rel="stylesheet" href="cc/layer_viewer.css">
+<link rel="stylesheet" href="cc/layer_viewer.js">
 <link rel="stylesheet" href="cc/layer_tree_host_impl_view.css">
 <link rel="stylesheet" href="cc/picture_debugger.css">
 <link rel="stylesheet" href="cc/picture_view.css">
