--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -45,6 +45,7 @@ body {
 <link rel="stylesheet" href="ui/quad_view.css">
 <link rel="stylesheet" href="ui/quad_stack.css">
 <link rel="stylesheet" href="cc/layer_viewer.css">
+<link rel="stylesheet" href="cc/layer_tree_quad_stack_viewer.css">
 <link rel="stylesheet" href="cc/layer_viewer.js">
 <link rel="stylesheet" href="cc/layer_tree_host_impl_view.css">
 <link rel="stylesheet" href="cc/picture_debugger.css">
@@ -71,54 +72,6 @@ body {
 <link rel="stylesheet" href="tracing/timeline_view.css">
 <link rel="stylesheet" href="about_tracing/profiling_view.css">
 
-<!--
-Copyright (c) 2013 The Chromium Authors. All rights reserved.
-Use of this source code is governed by a BSD-style license that can be
-found in the LICENSE file.
--->
-
-<template id="record-selection-dialog-template">
-  <div class="record-selection-dialog">
-    <form>
-      <table>
-        <tr>
-          <td class="default-enabled-categories">
-            <div>Record&nbsp;Categories</div>
-            <div class="group-selectors">
-              Select
-              <button class="all-btn">All</button>
-              <button class="none-btn">None</button>
-            </div>
-            <div class="categories"></div>
-          </td>
-          <td class="default-disabled-categories">
-            <div>Disabled&nbsp;by&nbsp;Default&nbsp;Categories</div>
-            <div class="group-selectors">
-              Select
-              <button class="all-btn">All</button>
-              <button class="none-btn">None</button>
-            </div>
-            <div class="categories"></div>
-          </td>
-        </tr>
-      </table>
-    </form>
-
-    <div class="options">
-      <button class="record-categories">Record</button>
-      <label class="continuous-tracing-label">
-        Continuous tracing
-        <input type="checkbox" value="continuousTracing" checked="checked"
-               class="continuous-tracing-button" />
-      </label>
-      <label class="system-tracing-label">
-        System events
-        <input type="checkbox" value="systemTracing"
-               class="system-tracing-button" />
-      </label>
-    </div>
-  </div>
-</template>
 <!--
 Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
@@ -184,6 +137,54 @@ found in the LICENSE file.
   <div class="info-button-container metadata-dialog">
     Metadata Info:
     <div class="info-button-text metadata-dialog-text"></div>
+  </div>
+</template>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
+
+<template id="record-selection-dialog-template">
+  <div class="record-selection-dialog">
+    <form>
+      <table>
+        <tr>
+          <td class="default-enabled-categories">
+            <div>Record&nbsp;Categories</div>
+            <div class="group-selectors">
+              Select
+              <button class="all-btn">All</button>
+              <button class="none-btn">None</button>
+            </div>
+            <div class="categories"></div>
+          </td>
+          <td class="default-disabled-categories">
+            <div>Disabled&nbsp;by&nbsp;Default&nbsp;Categories</div>
+            <div class="group-selectors">
+              Select
+              <button class="all-btn">All</button>
+              <button class="none-btn">None</button>
+            </div>
+            <div class="categories"></div>
+          </td>
+        </tr>
+      </table>
+    </form>
+
+    <div class="options">
+      <button class="record-categories">Record</button>
+      <label class="continuous-tracing-label">
+        Continuous tracing
+        <input type="checkbox" value="continuousTracing" checked="checked"
+               class="continuous-tracing-button" />
+      </label>
+      <label class="system-tracing-label">
+        System events
+        <input type="checkbox" value="systemTracing"
+               class="system-tracing-button" />
+      </label>
+    </div>
   </div>
 </template>
 
