--- a/trunk/src/ui/mouse_mode_selector.html
+++ b/trunk/src/ui/mouse_mode_selector.html
@@ -10,5 +10,6 @@ found in the LICENSE file.
     <div class="pan-scan-mode-button tool-button"></div>
     <div class="selection-mode-button tool-button"></div>
     <div class="zoom-mode-button tool-button"></div>
+    <div class="timing-mode-button tool-button"></div>
   </div>
 </template>
