Ensure unit tests are selected by default.
When going to tests.html for the first time, we need to make sure
that one of the buttons is selected by default.

BUG=none
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/12038046

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -76,6 +76,11 @@ found in the LICENSE file.
 
       var testTypeInputs = document.getElementsByName('test-type');
       var testType = localStorage.getItem('testing::test-type');
+      if (!testType) {
+        testType = 'unit-test';
+        localStorage.setItem('testing::test-type', 'unit-test');
+      }
+
       for (var i = 0; i < testTypeInputs.length; ++i) {
         if (testTypeInputs[i].value === testType)
           testTypeInputs[i].checked = true;
