Add Alternative DPI testing option.
A new checkbox runs the tests with window.devicePixelRatio set to 2 if 1 else 1 if 2.

BUG=339
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/12071044

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -73,6 +73,16 @@ found in the LICENSE file.
         base.unittest.runSuites();
       });
       base.unittest.showCondensed(format.checked);
+      
+      var alternativeDPI = document.querySelector('.alternative-DPI');
+      alternativeDPI.checked = 
+          localStorage.getItem('testing::alternativeDPI') === 'true';
+      alternativeDPI.addEventListener('click', function(ev) {
+        localStorage.setItem('testing::alternativeDPI', ev.target.checked);
+        base.unittest.alternativeDPI(ev.target.checked);
+        window.location.reload();
+      });
+      base.unittest.alternativeDPI(alternativeDPI.checked);
 
       var testTypeInputs = document.getElementsByName('test-type');
       var testType = localStorage.getItem('testing::test-type');
@@ -130,6 +140,10 @@ found in the LICENSE file.
       <input type="radio" name="test-type" value="perf-test">
         Run perf tests
       </input>
+    </div>
+    <div class="unittest" 
+        title="Override built-in devicePixelRatio: 1 -> 2, >1 -> 1">
+      <input type="checkbox" class="alternative-DPI" /> Alternative DPI
     </div>
     <div class="unittest">
       <input type="checkbox" id="short-format" /> Short format
