Automatically add tests for low/hi dpi.
This is an alternate approach to the hi/low DPI testing. Instead of having
a button that we have to remember to click, we add an anotation to
tests that need to be DPI aware. {dpiAware: true}. This will tell the
test framework to generate two tests, one at low DPI and one at hi DPI. This
way, we will always be running the hi/low DPI tests.

BUG=
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/12282043

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -89,16 +89,6 @@ found in the LICENSE file.
         base.unittest.runSuites();
       });
       base.unittest.showCondensed(format.checked);
-      
-      var alternativeDPI = document.querySelector('.alternative-DPI');
-      alternativeDPI.checked = 
-          localStorage.getItem('testing::alternativeDPI') === 'true';
-      alternativeDPI.addEventListener('click', function(ev) {
-        localStorage.setItem('testing::alternativeDPI', ev.target.checked);
-        base.unittest.alternativeDPI(ev.target.checked);
-        window.location.reload();
-      });
-      base.unittest.alternativeDPI(alternativeDPI.checked);
 
       var testTypeInputs = document.getElementsByName('test-type');
       for (var i = 0; i < testTypeInputs.length; ++i) {
@@ -150,16 +140,11 @@ found in the LICENSE file.
           class="unittest-error-link">Run manually</a>
     </div>
     <div class="unittest">
-      <input type="radio" name="test-type" value="unit">
-        Run unit tests
-      </input>
-      <input type="radio" name="test-type" value="perf">
-        Run perf tests
-      </input>
-    </div>
-    <div class="unittest"
-        title="Override built-in devicePixelRatio: 1 -> 2, >1 -> 1">
-      <input type="checkbox" class="alternative-DPI" /> Alternative DPI
+      <input type="radio" name="test-type" value="unit" />
+      Run unit tests
+
+      <input type="radio" name="test-type" value="perf" />
+      Run perf tests
     </div>
     <div class="unittest">
       <input type="checkbox" id="short-format" /> Short format
