Allow zoom on the timeline with ALT-mousewheel
This change re-adds zoom with ALT-mousewheel to TimelineTrackView.

BUG=409
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/13589043

--- a/trunk/src/tracing/timeline_view.html
+++ b/trunk/src/tracing/timeline_view.html
@@ -51,6 +51,10 @@ found in the LICENSE file.
         <div class='command'>click</div>
         <div class='action'>Select event</div>
       </div>
+      <div class='pair'>
+        <div class='command'>alt-mousewheel</div>
+        <div class='action'>Zoom in/out</div>
+      </div>
 
       <h3>Select mode</h3>
       <div class='pair'>
