Add rudimentary visualization for GPU state snapshots
This patch adds rudimentary visualization for GPU state snapshots
objects[1]. For now it will only display the screenshot that is embedded
in the snapshot.

[1] https://codereview.chromium.org/23926013/

R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/13625043

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -37,6 +37,7 @@ found in the LICENSE file.
   base.require('cc');
   base.require('tcmalloc');
   base.require('system_stats');
+  base.require('gpu');
   </script>
   <script>
   'use strict';
