Add icons of mouse modes to help text
screenshot: https://docs.google.com/file/d/0B8Y78t3tjy1XOVpqWWVrblEwSkk/edit?usp=sharing
BUG=452
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/13517045

--- a/trunk/src/tracing/timeline_view.html
+++ b/trunk/src/tracing/timeline_view.html
@@ -56,7 +56,10 @@ found in the LICENSE file.
         <div class='action'>Zoom in/out</div>
       </div>
 
-      <h3>Select mode</h3>
+      <h3>
+        <span class='mouse-mode-icon select-mode'></span>
+        Select mode
+      </h3>
       <div class='pair'>
         <div class='command'>drag</div>
         <div class='action'>Box select</div>
@@ -67,19 +70,28 @@ found in the LICENSE file.
         <div class='action'>Select all events with same title</div>
       </div>
 
-      <h3>Pan mode</h3>
+      <h3>
+        <span class='mouse-mode-icon pan-mode'></span>
+        Pan mode
+      </h3>
       <div class='pair'>
         <div class='command'>drag</div>
         <div class='action'>Pan the view</div>
       </div>
 
-      <h3>Zoom mode</h3>
+      <h3>
+        <span class='mouse-mode-icon zoom-mode'></span>
+        Zoom mode
+      </h3>
       <div class='pair'>
         <div class='command'>drag</div>
         <div class='action'>Zoom in/out by dragging up/down</div>
       </div>
 
-      <h3>Timing mode</h3>
+      <h3>
+        <span class='mouse-mode-icon timing-mode'></span>
+        Timing mode
+      </h3>
       <div class='pair'>
         <div class='command'>drag</div>
         <div class='action'>Create or move markers</div>
