--- a/trunk/examples/skia_debugger.html
+++ b/trunk/examples/skia_debugger.html
@@ -29,58 +29,14 @@ found in the LICENSE file.
   <script>
   'use strict';
 
-  /* Public Domain code from Mozilla
-   *   https://developer.mozilla.org/en-US/docs/Web/JavaScript/Base64_encoding_and_decoding
-   */
-  function b64ToUint6 (nChr) {
-    return nChr > 64 && nChr < 91 ?
-        nChr - 65
-      : nChr > 96 && nChr < 123 ?
-        nChr - 71
-      : nChr > 47 && nChr < 58 ?
-        nChr + 4
-      : nChr === 43 ?
-        62
-      : nChr === 47 ?
-        63
-      : 0;
-  }
-
-  function base64DecToArr (sBase64, nBlocksSize) {
-    var sB64Enc = sBase64.replace(/[^A-Za-z0-9\+\/]/g, "");
-    var nInLen = sB64Enc.length;
-    var nOutLen = nBlocksSize ?
-        Math.ceil((nInLen * 3 + 1 >> 2) / nBlocksSize) * nBlocksSize :
-        nInLen * 3 + 1 >> 2;
-    var taBytes = new Uint8Array(nOutLen);
-
-    for (var nMod3, nMod4, nUint24 = 0, nOutIdx = 0, nInIdx = 0;
-        nInIdx < nInLen;
-        nInIdx++) {
-      nMod4 = nInIdx & 3;
-      nUint24 |= b64ToUint6(sB64Enc.charCodeAt(nInIdx)) << 18 - 6 * nMod4;
-      if (nMod4 === 3 || nInLen - nInIdx === 1) {
-        for (nMod3 = 0; nMod3 < 3 && nOutIdx < nOutLen; nMod3++, nOutIdx++) {
-          taBytes[nOutIdx] = nUint24 >>> (16 >>> nMod3 & 24) & 255;
-        }
-        nUint24 = 0;
-      }
-    }
-    return taBytes;
-  }
-  /* End Mozilla Code */
-
   function getPicture(skp64) {
-    var skpAsArrayBuffer = base64DecToArr(skp64).buffer;
-    var skpAsDataView = new DataView(skpAsArrayBuffer);
+    var size = chrome.skiaBenchmarking.getInfo(skp64);
+    if (size === undefined)
+      throw new Error('Unable to get picture information');
 
-    // TODO(dsinclair): Remove this and replace with a call to something like
-    //    window.chrome.skiaBenchmarking.getSkpInfo(skp64);
-    var width = skpAsDataView.getUint32(4, true);
-    var height = skpAsDataView.getUint32(8, true);
-
-    return new cc.Picture(skp64, base.Rect.FromXYWH(0, 0, width, height),
-        base.Rect.FromXYWH(0, 0, width, height));
+    return new cc.Picture(skp64,
+        base.Rect.FromXYWH(0, 0, size.width, size.height),
+        base.Rect.FromXYWH(0, 0, size.width, size.height));
   };
 
   var debuggerEl;
