--- a/trunk/examples/skia_debugger.html
+++ b/trunk/examples/skia_debugger.html
@@ -29,7 +29,25 @@ found in the LICENSE file.
   <script>
   'use strict';
 
+  var debuggerEl;
+
   function getPicture(skp64) {
+    if (!cc.PictureSnapshot.CanGetInfo()) {
+      console.error(cc.PictureSnapshot.HowToEnablePictureDebugging());
+
+      var infoBar = new ui.InfoBar();
+      var view = document.querySelector('.view');
+
+      view.removeChild(debuggerEl);
+      debuggerEl = undefined;
+
+      view.appendChild(infoBar);
+
+      infoBar.message = cc.PictureSnapshot.HowToEnablePictureDebugging();
+      infoBar.visible = true;
+      return undefined;
+    }
+
     var size = chrome.skiaBenchmarking.getInfo(skp64);
     if (size === undefined)
       throw new Error('Unable to get picture information');
@@ -38,8 +56,6 @@ found in the LICENSE file.
         base.Rect.FromXYWH(0, 0, size.width, size.height),
         base.Rect.FromXYWH(0, 0, size.width, size.height));
   };
-
-  var debuggerEl;
 
   function loadSkp(filename, onSkpLoaded) {
     getAsync(filename, function(trace) {
@@ -66,6 +82,8 @@ found in the LICENSE file.
 
   function createViewFromSkp(filename, skp) {
     var p = getPicture(skp);
+    if (p === undefined)
+      return;
     debuggerEl.picture = p;
   }
 
