--- a/trunk/examples/skia_debugger.html
+++ b/trunk/examples/skia_debugger.html
@@ -53,8 +53,8 @@ found in the LICENSE file.
       throw new Error('Unable to get picture information');
 
     return new cc.Picture(skp64,
-        base.Rect.FromXYWH(0, 0, size.width, size.height),
-        base.Rect.FromXYWH(0, 0, size.width, size.height));
+        base.Rect.fromXYWH(0, 0, size.width, size.height),
+        base.Rect.fromXYWH(0, 0, size.width, size.height));
   };
 
   function loadSkp(filename, onSkpLoaded) {
@@ -153,4 +153,3 @@ found in the LICENSE file.
   </script>
 </body>
 </html>
-
