Allow 95%ile to be turned off
As part of this, changed the way layout was done in the picture_ops_chart_view
in order to make it be more component-y.

--- a/trunk/src/cc/picture_debugger.html
+++ b/trunk/src/cc/picture_debugger.html
@@ -18,8 +18,7 @@ found in the LICENSE file.
     </picture-info>
   </left-panel>
   <right-panel>
-    <ops-chart></ops-chart>
+    <picture-ops-chart-view></picture-ops-chart-view>
     <raster-area></raster-area>
   </right-panel>
 </template>
-
