Overhaul of overlays & recording selectoin dialog
This began as me wanting to fix the sizing issues on the recording dialog to
make it pretty, and overflow-scroll predictably. It turned into a megapatch.

Key changes:
- Overlay system redone to use flexboxes all the way down. It had a few
  accidental block flows that were messing everything up. Then I think
  more stretch modes and max-blah modes were added to compensate, making it
  more hairy. It behaves predictably now. The record selection dialog
  for instance, has overflow-y exactly where you'd expect it.

- Using ui.dom_helpers for the sampling/etc check boxes in the record_selection  dialog
- Using an event instead of a callback that you set to know when the dialog is
  closed

--- a/trunk/src/ui/overlay.html
+++ b/trunk/src/ui/overlay.html
@@ -13,12 +13,13 @@ found in the LICENSE file.
         position: absolute;
         top: 0;
         z-index: 1000;
+        font-family: sans-serif;
       }
       :scope:focus {
         outline: none;
       }
     }
-    .overlay-container {
+    overlay-mask {
       -webkit-justify-content: center;
       background: rgba(0, 0, 0, 0.8);
       display: -webkit-flex;
@@ -28,82 +29,92 @@ found in the LICENSE file.
       top: 0;
       width: 100%;
     }
-    .overlay-subcontainer {
-      -webkit-align-items: center;
+    overlay-vertical-centering-container {
       -webkit-justify-content: center;
+      -webkit-flex-direction: column;
       display: -webkit-flex;
     }
-    .body {
-      display: -webkit-flex;
+    overlay-frame {
       z-index: 1100;
-    }
-    .container {
       background: rgb(255, 255, 255);
       border: 1px solid #ccc;
-      margin: 2px;
+      margin: 75px;
+      display: -webkit-flex;
+      -webkit-flex-direction: column;
     }
-    .header {
-      -webkit-align-content: stretch;
+    title-bar {
+      -webkit-align-items: center;
       -webkit-flex-direction: row;
       border-bottom: 1px solid #ccc;
       background-color: #ddd;
       display: -webkit-flex;
-      font-size: 1.5em;
-      font-weight; bold;
-      height: 32px;
       padding: 5px;
+      -webkit-flex: 0 0 auto;
     }
-    .title {
+    title {
+      display: inline;
+      font-weight: bold;
       -webkit-box-flex: 1;
       -webkit-flex: 1 1 auto;
     }
-    .close {
+    close-button {
       -webkit-align-self: flex-end;
-      -webkit-box-flex: 0;
-      -webkit-flex: 0 0 auto;
-      float: right;
       border: 1px solid #eee;
       background-color: #999;
-      font-size: 0.5em;
+      font-size: 10pt;
       font-weight: bold;
-      height: 16px;
-      margin: 5px 0 0 20px;
-      padding: 0;
-      padding-bottom: 5px;
+      padding: 2px;
       text-align: center;
       width: 16px;
     }
-    .close:hover {
+    close-button:hover {
       background-color: #ddd;
       border-color: black;
       cursor: pointer;
     }
-    .content {
-      clear: both;
-      max-height: 500px;
-      max-width: 800px;
-      min-height: 200px;
-      min-width: 400px;
-      overflow: auto;
+    overlay-content {
+      display: -webkit-flex;
+      -webkit-flex: 1 1 auto;
+      -webkit-flex-direction: column;
+      overflow-y: auto;
       padding: 10px;
+      min-width: 300px;
+    }
+    button-bar {
+      -webkit-flex-direction: row;
+      border-top: 1px solid #ccc;
+      display: -webkit-flex;
+      padding:4px;
+      -webkit-align-items: baseline;
+      -webkit-flex: 0 0 auto;
+    }
+    button-bar > padding {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1 1 auto;
+    }
+    button-bar > left-buttons,
+    button-bar > right-buttons {
+      display: -webkit-flex;
+      -webkit-flex-direction: row;
     }
   </style>
 
-  <div class='overlay-container'>
-    <div class='overlay-subcontainer'>
-      <div class="body">
-        <div class="container">
-          <div class="header">
-            <div class="title">
-              <content select=".header"></content>
-            </div>
-            <div class="close">x</div>
-          </div>
-          <div class="content">
-            <content></content>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <overlay-mask>
+    <overlay-vertical-centering-container>
+      <overlay-frame>
+        <title-bar>
+          <title></title>
+          <close-button>&#x2715</close-button>
+        </title-bar>
+        <overlay-content>
+          <content></content>
+        </overlay-content>
+        <button-bar>
+          <left-buttons></left-buttons>
+          <padding></padding>
+          <right-buttons></right-buttons>
+        </button-bar>
+      </overlay-frame>
+    </overlay-vertical-centering-container>
+  </overlay-mask>
 </template>
