Add import progress dialog to about:tracing at long last
This adds Task to tracing.importer. Unlike promises, importer.Task
specifies exact run order but can resolve synchronously. Tasks do not
carry result values either. They just run. This is intentional: we just want
something minimally simple that handles the importing use case. Nothing more.

Task has two static helpers: RunSynchronously and RunWhenIdle. These either run
a task immediately or using raf.requestIdleCallback. In the latter case, a
promise is returned to indicate completion of the task.

TraceModel is then updated to use tasks for its import, and an importWithDiloag
is added on top of the task primitives.

BUG=186
TBR=dsinclair

Review URL: https://codereview.appspot.com/13648050

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -84,13 +84,20 @@ found in the LICENSE file.
 
   function createViewFromTraces(filenames, traces) {
     var m = new tracing.TraceModel();
-    m.importTraces(traces, true);
-
-    timelineViewEl.model = m;
-    timelineViewEl.tabIndex = 1;
-    if (timelineViewEl.timeline)
-      timelineViewEl.timeline.focusElement = timelineViewEl;
-    timelineViewEl.viewTitle = filenames;
+    var p = m.importTracesWithProgressDialog(traces, true);
+    p.then(
+      function() {
+        timelineViewEl.model = m;
+        timelineViewEl.tabIndex = 1;
+        if (timelineViewEl.timeline)
+          timelineViewEl.timeline.focusElement = timelineViewEl;
+        timelineViewEl.viewTitle = filenames;
+      },
+      function(err) {
+        var overlay = new ui.Overlay();
+        overlay.textContent = normalizeException(err).message;
+        overlay.visible = true;
+      });
   }
 
   function onSelectionChange() {
