Importer task system updates
R=dsinclair@chromium.org, dsinclair

Review URL: https://codereview.appspot.com/13663046

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -96,6 +96,7 @@ found in the LICENSE file.
       function(err) {
         var overlay = new ui.Overlay();
         overlay.textContent = normalizeException(err).message;
+        overlay.title = 'Import error';
         overlay.visible = true;
       });
   }
