--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -95,7 +95,7 @@ found in the LICENSE file.
       },
       function(err) {
         var overlay = new ui.Overlay();
-        overlay.textContent = normalizeException(err).message;
+        overlay.textContent = base.normalizeException(err).message;
         overlay.title = 'Import error';
         overlay.visible = true;
       });
