--- a/trunk/src/tracing/timeline_view.html
+++ b/trunk/src/tracing/timeline_view.html
@@ -139,7 +139,12 @@ found in the LICENSE file.
 
       <div class='pair'>
         <div class='command'>g/G</div>
-        <div class='action'>Add frame markers to event</div>
+        <div class='action'>Toggle 60hz grid</div>
+      </div>
+
+      <div class='pair'>
+        <div class='command'>m</div>
+        <div class='action'>Mark current selection</div>
       </div>
 
       <div class='pair'>
