--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -18,7 +18,8 @@ found in the LICENSE file.
     display: -webkit-flex;
     -webkit-flex-direction: column;
   }
-  x-timeline-view {
+
+  body > x-timeline-view {
     -webkit-flex: 1 1 auto;
     overflow: hidden;
     position: absolute;
