--- a/trunk/trace_viewer/tracing/find_control.html
+++ b/trunk/trace_viewer/tracing/find_control.html
@@ -8,7 +8,7 @@ found in the LICENSE file.
   <style>
     find-control-root {
       -webkit-user-select: none;
-      display: -webkit-box;
+      display: -webkit-flex;
       position: relative;
     }
     input {
