--- a/trunk/trace_viewer/tracing/timeline_view.html
+++ b/trunk/trace_viewer/tracing/timeline_view.html
@@ -10,7 +10,12 @@ found in the LICENSE file.
     <div class="title">^_^</div>
     <div id="right-controls" class="controls"></div>
   </div>
-  <div class="container"></div>
+  <middle-container>
+    <track-view-container></track-view-container>
+    <x-timeline-view-side-panel-container></x-timeline-view-side-panel-container>
+  </middle-container>
+  <x-drag-handle></x-drag-handle>
+  <div id="analysis"></div>
 </template>
 
 <template id="help-btn-template">
