--- a/trunk/trace_viewer/about_tracing/profiling_view.html
+++ b/trunk/trace_viewer/about_tracing/profiling_view.html
@@ -25,9 +25,11 @@ found in the LICENSE file.
   <x-timeline-view>
     <x-timeline-view-buttons>
       <button id="record-button">Record</button>
-      <input id="monitor-checkbox" type="checkbox">
-      <label for="monitor-checkbox">Monitoring</label></input>
-      <button id="capture-button">Capture Monitoring Snapshot</button>
+      <span id="monitoring-elements">
+        <input id="monitor-checkbox" type="checkbox">
+        <label for="monitor-checkbox">Monitoring</label></input>
+        <button id="capture-button">Capture Monitoring Snapshot</button>
+      </span>
       <button id="save-button">Save</button>
       <button id="load-button">Load</button>
     </x-timeline-view-buttons>
