--- a/trunk/trace_viewer/tracing/find_control_test.html
+++ b/trunk/trace_viewer/tracing/find_control_test.html
@@ -1,11 +1,16 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/find_control.html">
+
+<script>
 'use strict';
 
 tvcm.require('tracing.test_utils');
-tvcm.require('tracing.find_control');
 
 tvcm.unittest.testSuite('tracing.find_control_test', function() {
   test('instantiate', function() {
@@ -26,5 +31,5 @@ tvcm.unittest.testSuite('tracing.find_control_test', function() {
 
     this.addHTMLOutput(ctl);
   });
-
 });
+</script>
