--- a/trunk/trace_viewer/tracing/find_controller.html
+++ b/trunk/trace_viewer/tracing/find_controller.html
@@ -1,7 +1,11 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 /**
@@ -101,3 +105,4 @@ tvcm.exportTo('tracing', function() {
     FindController: FindController
   };
 });
+</script>
