Convert gpu directory to HTML modules
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/111380044

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -9,6 +9,9 @@ found in the LICENSE file.
 <title>Simple Embedded Viewer</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src="/tvcm/__init__.js"></script>
+
+<link rel="import" href="/gpu.html">
+
 <style>
   body {
     margin: 0;
@@ -45,7 +48,6 @@ found in the LICENSE file.
   tvcm.require('cc');
   tvcm.require('tcmalloc');
   tvcm.require('system_stats');
-  tvcm.require('gpu');
   </script>
   <script>
   'use strict';
