--- a/trunk/trace_viewer/gpu/state_test.html
+++ b/trunk/trace_viewer/gpu/state_test.html
@@ -1,14 +1,19 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/gpu.html">
+<script src="/gpu/state_test_data.js"></script>
+
+<script>
 'use strict';
 
-tvcm.require('gpu');
-tvcm.require('gpu.state');
 tvcm.require('tracing.importer.trace_event_importer');
 tvcm.require('tracing.trace_model');
-tvcm.requireRawScript('gpu/state_test_data.js');
+
 
 tvcm.unittest.testSuite('gpu.state_test', function() {
   test('basic', function() {
@@ -23,3 +28,4 @@ tvcm.unittest.testSuite('gpu.state_test', function() {
     instance.wasDeleted(150);
   });
 });
+</script>
