--- a/trunk/trace_viewer/gpu/state.html
+++ b/trunk/trace_viewer/gpu/state.html
@@ -1,13 +1,16 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 tvcm.require('tracing.trace_model.object_instance');
 
 tvcm.exportTo('gpu', function() {
-
   var ObjectSnapshot = tracing.trace_model.ObjectSnapshot;
 
   /**
@@ -43,3 +46,4 @@ tvcm.exportTo('gpu', function() {
     StateSnapshot: StateSnapshot
   };
 });
+</script>
