--- a/trunk/trace_viewer/gpu/state_view.html
+++ b/trunk/trace_viewer/gpu/state_view.html
@@ -1,16 +1,19 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/gpu/state_view.css">
+
+<script>
 'use strict';
-
-tvcm.requireStylesheet('gpu.state_view');
 
 tvcm.require('tracing.analysis.object_snapshot_view');
 tvcm.require('tracing.analysis.util');
 
 tvcm.exportTo('gpu', function() {
-
   /*
    * Displays a GPU state snapshot in a human readable form.
    * @constructor
@@ -35,12 +38,10 @@ tvcm.exportTo('gpu', function() {
       }
     }
   };
-
-  tracing.analysis.ObjectSnapshotView.register(
-      'gpu::State', StateSnapshotView);
+  tracing.analysis.ObjectSnapshotView.register('gpu::State', StateSnapshotView);
 
   return {
     StateSnapshotView: StateSnapshotView
   };
-
 });
+</script>
